# pycode

./: 2020_2.py  2022_2.py  2022_4.py  pyproject.toml  test.py
CheckerBoard/: hw1_1.py  hw1_3.py
Computer_Vision/: 02_Numpy.py  03_OpenCV.py  04_File.py  04_KeyEvent.py  04_Line.py  04_Other.py  04_Shapes.py  04_Text.py  04_Time.py  04_TrackBar.py  04_Video.py  05_Bright.py  05_Contrast.py  05_Histogram.py  06_BoolCalc.py  06_Calc.py  07_Bilateral.py  07_Blurring.py  07_Embossing.py  07_Median.py  07_Noise.py  07_Sharpening.py  08_Affine.py  08_Flip.py  08_Projective.py  08_Rotation.py  08_Scale.py  08_Shear.py  09_Gradient.py  09_Hough.py  10_Color.py  10_Range.py  2022_1.py  mydata.xml  sudoku.py
Computer_Vision/CheckerBoard/: hw1_2.py  hw1_4.py  kubernetes-based_architecture  test.py
Computer_Vision/ObjectDetection/: hw2_1.py  hw2_2.py
Security/: S_AES.py  mod.py  quiz3.py
myenv/: pyvenv.cfg
